test/param/diten/errorDepth.depth2.good
errorDepth.chpl:11: In function 'baz':
errorDepth.chpl:11: error: error 2
